# ProjectFlix

./: .gitignore  CMakeLists.txt  Dockerfile.client  README.md  docker-compose.yml
android/: settings.gradle.kts
android/app/: build.gradle.kts
android/gradle/: libs.versions.toml
android/gradle/wrapper/: gradle-wrapper.properties
client/: .gitignore
client/src/: App.css  App.js  index.css
client/src/components/: ProtectedRoute.js
client/src/services/: api.js
headers/: Add.h  App.h  ClientHandler.h  Data.h  Delete.h  Filestream.h  Get.h  Help.h  ICommand.h  IMenu.h  IServer.h  IStreamable.h  IThreadManager.h  Menu.h  Movie.h  Patch.h  Post.h  Recommend.h  ServerMenu.h  SimpleThreadManager.h  TCPServer.h  ThreadPoolManager.h  User.h
src/: Add.cpp  App.cpp  Client.py  ClientHandler.cpp  Data.cpp  Delete.cpp  Dockerfile.TCP  Filestream.cpp  Get.cpp  Help.cpp  Main.cpp  Menu.cpp  Movie.cpp  Patch.cpp  Post.cpp  Recommend.cpp  ServerMenu.cpp  SimpleThreadManager.cpp  TCPServer.cpp  ThreadPoolManager.cpp  User.cpp
tests/: AddTest.cpp  AppTest.cpp  DeleteTest.cpp  FilestreamTest.cpp  GetTest.cpp  HelpTest.cpp  MenuTest.cpp  MovieTest.cpp  PatchTest.cpp  PostTest.cpp  RecommendTest.cpp  ServerMenuTest.cpp  TCPServerTest.cpp  UserTest.cpp  details.txt
tests/webServer/: app.js  jwt.js
tests/webServer/controllers/: MovieController.js  UserController.js
tests/webServer/middlewares/: auth.js  upload.js
tests/webServer/routes/: AuthRoutes.js
tests/webServer/services/: RecommendationService.js
tests/wiki/: web.md
webServer/: Dockerfile.API
webServer/controllers/: CategoryController.js  RecommendationController.js
webServer/models/: CategoryModel.js  MovieModel.js  UserModel.js
webServer/routes/: CategoryRoute.js  MovieRoute.js  UserRoutes.js
webServer/services/: CategoryService.js  MovieService.js  UserServices.js  WatchHistoryService.js
wiki/: android.md
(+86 files in other folders)
